--- a/bio.html
+++ b/bio.html
@@ -72,7 +72,7 @@
   <link rel="stylesheet" href="/input/main.css">
   <link rel="alternate" hreflang="en-us" href="https://www.eduardodavila.com/">
 
-  <title>"Eduardo Davila: Research"</title>
+  <title>"Eduardo Davila | Bio/CV"</title>
 
 </head>
 
