--- a/bio.html
+++ b/bio.html
@@ -103,6 +103,20 @@
 
   </div>
 
+  <!--         Bottom Links -->
+  
+  <br />
+  <br />
+
+  <p class="text-center">
+    <a href="bio.html">Bio/CV</a> |
+    <a href="research.html">Research</a> |
+    <a href="teaching.html">Teaching</a> |
+    <a href="discussions.html">Discussions</a> |
+    <a href="contact.html">Contact</a>
+  
+  </p>
+
 <!-- Statcounter code -->
   <script type="text/javascript">
   var sc_project=9964382; 
