--- a/bio.html
+++ b/bio.html
@@ -48,6 +48,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="teaching.html">Teaching</a>
                     </li>
+                    <!-- <li class="nav-item"> -->
+                      <!-- <a class="nav-link" href="writings.html">Writings</a> -->
+                  <!-- </li> -->
                     <li class="nav-item">
                       <a class="nav-link" href="discussions.html">Discussions</a>
                     </li>
